# ModelToolbox

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSES.md  README.md
ModelIngest/: README.md  pyproject.toml
ModelIngest/modelingest/: __init__.py  assets.py  cleaner.py  cli.py  config.py  converter.py  crawler.py  frontmatter.py  guideline.py  manifest.py  parsers.py  pipeline.py  skillgen.py
ModelIngest/modelingest/distill/: __init__.py  chunk.py  distiller.py  dmanifest.py  linker.py  profiles.py  render.py  teacher.py  validate.py
ModelIngest/tests/: test_cleaner.py  test_crawler.py  test_distill.py  test_parsers.py  test_pipeline.py  test_skillgen.py
ModelMCP/: README.md  gen_nav_template.py
ModelMCP/ach-roundtable-mcp/: ach_matrix.py  agents.py  pipeline.py  requirements.txt  server.py
ModelMCP/altium-mcp/: install_deps.bat  manifest.json  merge_config.py  pyproject.toml  setup_claude_mcp.bat  start_server.py
ModelMemory/: README.md  pyproject.toml
ModelMemory/code_review_graph/: __init__.py
ModelMemory/tests/: test_cli_install.py  test_docstring_embeddings.py  test_documentation.py  test_embedding_refresh.py  test_skills.py
ModelOffice/: NOTICE.md  README.md
ModelProvider/: .env.example  README.md  pyproject.toml
ModelProvider/modelprovider/: __init__.py  base.py  cli.py  client.py  config.py  http.py  types.py
ModelProvider/modelprovider/providers/: anthropic.py  cli_agent.py  gemini.py  openai_compat.py
ModelProvider/tests/: test_provider.py
ModelSkill/: README.md
ModelSkill/.claude/: settings.json
ModelSkill/.claude-plugin/: marketplace.json  plugin.json
ModelSkill/.obsidian/: graph.json  workspace.json
ModelSkill/commands/: skill-list.md  skill-new.md  skill-search.md  skill-sync.md
ModelSkill/hooks/: hooks.json
ModelSkill/registry/: SKILLS.md  skills-index.json
ModelSkill/scripts/: build_registry.py  (+5 more)
ModelTraining/: NOTICE.md  pyproject.toml
ObsidianRag/: README
docs/: architecture.md
orchestrator/: README.md  bootstrap.ps1  bootstrap.sh  mcp.aggregate.json
pipeline/: README.md  pyproject.toml
pipeline/configs/: train.gemma-vision.yaml
pipeline/pipeline_mt/: __init__.py  cli.py  datagen.py  serve.py  train.py
pipeline/tests/: test_pipeline_mt.py
(+304 files in other folders)
