[project]
name = "modelingest"
version = "0.1.0"
description = "原始文档 (PDF/Word/Excel/PPT/图片) → Markdown 语料转换器，保留本地原件"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lbxAOA" }]
dependencies = [
    # markitdown 为首选引擎；[all] 覆盖 pdf/docx/xlsx/pptx/图片等。
    "markitdown[all]>=0.0.1a2",
]

[project.optional-dependencies]
# PDF 页图抽取（多模态素材）。未安装则该功能优雅降级。
pdf = ["PyMuPDF>=1.24"]
# 阶段 A 复杂 PDF 解析器（可选，按需装其一即可；未装自动降级到 markitdown）。
parse = ["docling>=2.0"]
# 阶段 B 知识蒸馏：需 ModelProvider（同仓库兄弟包，用 `pip install -e ../ModelProvider` 安装）。
distill = []
dev = ["pytest>=8"]

[project.scripts]
modelingest = "modelingest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modelingest*"]
