[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modelprovider"
version = "0.1.0"
description = "ModelToolbox 统一大模型调用层：OpenAI / Anthropic / Gemini / DeepSeek / 本地 Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "lbxAOA" }]
keywords = ["llm", "openai", "anthropic", "gemini", "deepseek", "ollama", "modeltoolbox"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
modelprovider = "modelprovider.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelprovider*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
